--- a/app/movies/movies_templates/addactor.html
+++ b/app/movies/movies_templates/addactor.html
@@ -24,9 +24,13 @@
     <form method="POST">
         {{ form.hidden_tag() }}
         <div class="form-group">
-            <fieldset id="name-field">
-                {{ form.name.label }}
-                {{ form.name(class="form-control", placeholder="Actor/Actress name...") }}
+            <fieldset id="first_name-field">
+                {{ form.first_name.label }}
+                {{ form.first_name(class="form-control", placeholder="Actor/Actress first name...") }}
+            </fieldset>
+            <fieldset id="last_name-field">
+                {{ form.last_name.label }}
+                {{ form.last_name(class="form-control", placeholder="Actor/Actress last name...") }}
             </fieldset>
             <fieldset id="age-field">
                 {{ form.age.label }}
@@ -40,9 +44,13 @@
                 {{ form.nationality.label }}
                 {{ form.nationality(class="form-control", placeholder="Nationality...") }}
             </fieldset>
-            <fieldset id="best-film-field">
-                {{ form.best_film.label }}
-                {{ form.best_film(class="form-control", placeholder="Best performance...") }}
+            <fieldset id="bestrole-field">
+                {{ form.bestrole.label }}
+                {{ form.bestrole(class="form-control", placeholder="Best role...") }}
+            </fieldset>
+            <fieldset id="bestmovie-field">
+                {{ form.bestmovie.label }}
+                {{ form.bestmovie(class="form-control", placeholder="Best movie...") }}
             </fieldset>
             <br>
             {{ form.submit(class="btn btn-info btn-block") }}
